# StoreSathi

./: .djinit  .env.sample  Procfile  README.md  justfile  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: ci.yml
apps/accounts/: apps.py
apps/barcode/: apps.py
apps/core/: apps.py
apps/customers/: apps.py
apps/expenses/: apps.py
apps/inventory/: apps.py
apps/notifications/: apps.py
apps/pos/: apps.py
apps/products/: apps.py
apps/purchases/: apps.py
apps/reports/: apps.py
apps/suppliers/: apps.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  unfold.py
